[ash-md] Fixes z-order to get context menus above overview items

Changes the parent of search widget labels and close buttons in overview
mode to be kShellWindowId_StatusContainer which is still above all
windows but below menus and screen overlays.

BUG=629039

Review-Url: https://codereview.chromium.org/2154323002
Cr-Commit-Position: refs/heads/master@{#406040}

Former-commit-id: 4aef838caffce4c0c9701c0f907ce826b30b7907